# xnu-loader

./: .gitignore  CMakeLists.txt  OVMF_VARS.fd  README.md  default.nix  flake.nix
include/: app.h  boot.h  common.h  console.h  devtree.h  fileio.h  jump.h  lowmem.h  macho.h  serial.h
include/uefi/: smbios.h
src/: app.c  boot.c  console.c  devtree.c  fileio.c  jump.S  lowmem.c  macho.c  main.c  serial.c
